Add Javadoc in OkDialogOverlay